testdata/errors/missing_register_colon.ral
config { }

register foo 32 { a: 32 }
